# rawspeed

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitattributes  .gitignore  .mailmap  .travis.yml  CMakeLists.txt  Doxyfile  README.md  README.rst  RawSpeed.kdevelop  RawSpeed.kdevelop.filelist  RawSpeed.sln  RawSpeedCompress.sln  cameras-xml.md  cameras.xml  credits.txt  showcameras.xsl  sonar-project.properties
RawSpeed/: ARWDecoder.cpp  ARWDecoder.h  ARWDecompressor.cpp  ARWDecompressor.h  AriDecoder.cpp  AriDecoder.h  ArwDecoder.cpp  ArwDecoder.h  BitPump.cpp  BitPump.h  BitPumpJPEG.cpp  BitPumpJPEG.h  BitPumpMSB.cpp  BitPumpMSB.h  BitPumpMSB16.h  BitPumpMSB32.cpp  BitPumpMSB32.h  BitPumpPlain.cpp  BitPumpPlain.h  BitPumpSSSE3.cpp  BitPumpSSSE3.h  BitStream.h  BlackArea.cpp  BlackArea.h  BlackAreaTest.cpp  Buffer.cpp  Buffer.h  ByteStream.cpp  ByteStream.h  ByteStreamSwap.cpp  ByteStreamSwap.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraMetaData.cpp  CameraMetaData.h  CameraMetaDataTest.cpp  CameraMetadataException.cpp  CameraMetadataException.h  CameraSensorInfo.cpp  (+144 more)
bench/librawspeed/: CMakeLists.txt
bench/librawspeed/adt/: CMakeLists.txt  CoalescingOutputIteratorBenchmark.cpp  DefaultInitAllocatorAdaptorBenchmark.cpp  VariableLengthLoadBenchmark.cpp
bench/librawspeed/bench/: CMakeLists.txt  Common.cpp  Common.h
bench/librawspeed/bitstreams/: BitStreamJPEGUtils.cpp  BitStreamJPEGUtils.h  BitStreamerBenchmark.cpp  BitStreamerJPEGBenchmark.cpp  BitVacuumerBenchmark.cpp  BitVacuumerJPEGBenchmark.cpp  CMakeLists.txt
bench/librawspeed/common/: CMakeLists.txt  CommonBenchmark.cpp  DefaultInitAllocatorAdaptorBenchmark.cpp
bench/librawspeed/decompressors/: CMakeLists.txt  DeflateDecompressorBenchmark.cpp  UncompressedDecompressorBenchmark.cpp
bench/librawspeed/interpolators/: CMakeLists.txt  Cr2sRawInterpolatorBenchmark.cpp
bench/librawspeed/io/: BitPumpJPEGBenchmark.cpp  BitStreamBenchmark.cpp  BitStreamerBenchmark.cpp  BitStreamerJPEGBenchmark.cpp  CMakeLists.txt
bench/librawspeed/metadata/: CMakeLists.txt  CameraMetaDataBenchmark.cpp
data/: CMakeLists.txt  README.md  cameras.xml  cameras.xsd  showcameras.xsl
docs/: CMakeLists.txt  CameraSupport.rst  Doxyfile.in  Doxygen.rst  IntegrationTesting.rst  ReferenceSampleArchive.rst  conf.py  index.rst  sphinx-pyexec.py
docs/lnt/: index.rst
fuzz/: .clang-tidy  CMakeLists.txt  all-fuzzers.txt  common.dict  libFuzzer_dummy_main.cpp
fuzz/corpora/: .gitignore  CMakeLists.txt
fuzz/librawspeed/: CMakeLists.txt
fuzz/librawspeed/bitstreams/: BitVacuumerRoundtrip.cpp
fuzz/librawspeed/codes/: CMakeLists.txt
fuzz/librawspeed/common/: CMakeLists.txt  DngOpcodes.cpp
fuzz/librawspeed/decoders/: CMakeLists.txt
fuzz/librawspeed/decompressors/: CMakeLists.txt  Cr2Decompressor.cpp  Cr2LJpegDecoder.cpp  CrwDecompressor.cpp  DummyLJpegDecoder.cpp  DummyLJpegDecompressor.cpp  FujiDecompressor.cpp  HasselbladDecompressor.cpp  HasselbladLJpegDecoder.cpp  KodakDecompressor.cpp  LJpegDecoder.cpp  LJpegDecompressor.cpp  NikonDecompressor.cpp  OlympusDecompressor.cpp  PanasonicDecompressor.cpp  PanasonicDecompressorV4.cpp  PanasonicDecompressorV5.cpp  PanasonicDecompressorV6.cpp  PanasonicV4Decompressor.cpp  PanasonicV5Decompressor.cpp  PanasonicV6Decompressor.cpp  PanasonicV7Decompressor.cpp  PentaxDecompressor.cpp  PhaseOneDecompressor.cpp  SamsungV0Decompressor.cpp  SamsungV1Decompressor.cpp  SamsungV2Decompressor.cpp  SonyArw1Decompressor.cpp  SonyArw2Decompressor.cpp  UncompressedDecompressor.cpp  VC5Decompressor.cpp
fuzz/librawspeed/fuzz/: CMakeLists.txt  Common.cpp  Common.h  RawSpeed.cpp
fuzz/librawspeed/io/: BitVacuumerRoundtrip.cpp  CMakeLists.txt
fuzz/librawspeed/parsers/: CMakeLists.txt  main.cpp
fuzz/rawspeed/: CMakeLists.txt  main.cpp
lnt/: CMakeLists.txt  README.rst  RawSpeed.cpp  build-lit.local.cfg  lit.local.cfg
lnt/litsupport_rawspeed/modules/: __init__.py  rsbench.py
lnt/raw-sample-archive/: CMakeLists.txt  lit.local.cfg
lnt/raw-sample-archive/rsbench/: CMakeLists.txt  lit.local.cfg
src/: CMakeLists.txt  config.h.in  librawspeed.pc.in
src/fuzzers/: CMakeLists.txt  libFuzzer_dummy_main.cpp
src/fuzzers/HuffmanTable/: main.cpp
src/fuzzers/TiffDecoders/: main.cpp
src/fuzzers/TiffParser/: CMakeLists.txt  main.cpp
src/fuzzers/rawspeed/: CMakeLists.txt  main.cpp
src/librawspeed/: .clang-tidy  CMakeLists.txt  README.md  RawSpeed-API.h
src/librawspeed/adt/: AlignedAllocator.h  Array1DRef.h  Array2DRef.h  Bit.h  BitIterator.h  CMakeLists.txt  Casts.h  CoalescingOutputIterator.h  CroppedArray1DRef.h  CroppedArray2DRef.h  DefaultInitAllocatorAdaptor.h  Invariant.h  Mutex.h  NORangesSet.h  NotARational.h  Optional.h  PartitioningOutputIterator.h  Point.h  Range.h  VariableLengthLoad.h  iterator_range.h
src/librawspeed/benchmark/: CMakeLists.txt  Common.cpp  Common.h
src/librawspeed/bitstreams/: BitStream.h  BitStreamJPEG.h  BitStreamLSB.h  BitStreamMSB.h  BitStreamMSB16.h  BitStreamMSB32.h  BitStreamPosition.h  BitStreamer.cpp  BitStreamer.h  BitStreamerJPEG.h  BitStreamerLSB.h  BitStreamerMSB.h  BitStreamerMSB16.h  BitStreamerMSB32.h  BitStreams.h  BitVacuumer.h  BitVacuumerJPEG.h  BitVacuumerLSB.h  BitVacuumerMSB.h  BitVacuumerMSB16.h  BitVacuumerMSB32.h  CMakeLists.txt
src/librawspeed/codes/: AbstractPrefixCode.h  AbstractPrefixCodeDecoder.h  AbstractPrefixCodeEncoder.h  AbstractPrefixCodeTranscoder.h  BinaryPrefixTree.h  CMakeLists.txt  DummyPrefixCodeDecoder.h  HuffmanCode.h  PrefixCode.h  PrefixCodeDecoder.h  PrefixCodeLUTDecoder.h  PrefixCodeLookupDecoder.h  PrefixCodeTreeDecoder.h  PrefixCodeVectorDecoder.h  PrefixCodeVectorEncoder.h
src/librawspeed/common/: Array2DRef.h  BayerPhase.h  CMakeLists.txt  ChecksumFile.cpp  ChecksumFile.h  Common.cpp  Common.h  CommonTest.cpp  CpuFeatures.cpp  Cpuid.cpp  Cpuid.h  CpuidTest.cpp  CroppedArray2DRef.h  DefaultInitAllocatorAdaptor.h  DngOpcodes.cpp  DngOpcodes.h  ErrorLog.cpp  ErrorLog.h  FloatingPoint.h  (+25 more)
src/utilities/: .clang-tidy  CMakeLists.txt
test/: .clang-tidy  CMakeLists.txt
test/librawspeed/: CMakeLists.txt
(+499 files in other folders)
