if(USE_XMLLINT)
  message(STATUS "Looking for xmllint tool")
  find_program(Xmllint_BIN xmllint)
  if(${Xmllint_BIN} STREQUAL "Xmllint_BIN-NOTFOUND")
    message(SEND_ERROR "Looking for xmllint tool - failed")
    set(USE_XMLLINT OFF)
  else(${Xmllint_BIN} STREQUAL "Xmllint_BIN-NOTFOUND")
    mark_as_advanced(Xmllint_BIN)
    message(STATUS "Looking for xmllint tool - found")
  endif(${Xmllint_BIN} STREQUAL "Xmllint_BIN-NOTFOUND")
endif(USE_XMLLINT)

if(USE_XMLLINT)
  include(run-xmllint)
  check_xml(${CMAKE_CURRENT_SOURCE_DIR}/cameras.xml ${CMAKE_CURRENT_SOURCE_DIR}/cameras.xsd)
endif(USE_XMLLINT)

install(FILES cameras.xml showcameras.xsl DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/darktable/rawspeed)
